postgres_results/test_setup/duckdb_result.txt

-----------
QUERY:
--
-- TEST_SETUP --- prepare environment expected by regression test scripts
--

-- directory paths and dlsuffix are passed to us in environment variables
-- \getenv abs_srcdir '/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests'
-- \getenv libdir '/home/keuscha/Documents/FS2024/AST/project/postgresql/src/test/regress'
-- \getenv dlsuffix '.so'

-- \set regresslib /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/postgresql/src/test/regress' '/regress' /* REPLACED */'.so'

--
-- synchronous_commit=off delays when hint bits may be set. Some plans change
-- depending on the number of all-visible pages, which in turn can be
-- influenced by the delayed hint bits. Force synchronous_commit=on to avoid
-- that source of variability.
--
SET synchronous_commit = on;
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "on"

-----------
QUERY:


--
-- Postgres formerly made the public schema read/write by default,
-- and most of the core regression tests still expect that.
--
GRANT ALL ON SCHEMA public TO public;
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "GRANT"

-----------
QUERY:


-- Create a tablespace we can use in tests.
SET allow_in_place_tablespaces = true;
RESULT:
	duckdb: ERROR - Catalog Error: unrecognized configuration parameter "allow_in_place_tablespaces"

Did you mean: "allow_unredacted_secrets"

-----------
QUERY:

CREATE TABLESPACE regress_tblspace LOCATION '';
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "TABLESPACE"

-----------
QUERY:


--
-- These tables have traditionally been referenced by many tests,
-- so create and populate them.  Insert only non-error values here.
-- (Some subsequent tests try to insert erroneous values.  That/* REPLACED */''s okay
-- because the table won/* REPLACED */''t actually change.  Do not change the contents
-- of these tables in later tests, as it may affect other tests.)
--

CREATE TABLE CHAR_TBL(f1 char(4));
RESULT:
	duckdb: []

-----------
QUERY:


INSERT INTO CHAR_TBL (f1) VALUES
  ('a'),
  ('ab'),
  ('abcd'),
  ('abcd    ');
RESULT:
	duckdb: []

-----------
QUERY:

VACUUM CHAR_TBL;
RESULT:
	duckdb: []

-----------
QUERY:


CREATE TABLE FLOAT8_TBL(f1 float8);
RESULT:
	duckdb: []

-----------
QUERY:


INSERT INTO FLOAT8_TBL(f1) VALUES
  ('0.0'),
  ('-34.84'),
  ('-1004.30'),
  ('-1.2345678901234e+200'),
  ('-1.2345678901234e-200');
RESULT:
	duckdb: []

-----------
QUERY:

VACUUM FLOAT8_TBL;
RESULT:
	duckdb: []

-----------
QUERY:


CREATE TABLE INT2_TBL(f1 int2);
RESULT:
	duckdb: []

-----------
QUERY:


INSERT INTO INT2_TBL(f1) VALUES
  ('0   '),
  ('  1234 '),
  ('    -1234'),
  ('32767'),  -- largest and smallest values
  ('-32767');
RESULT:
	duckdb: []

-----------
QUERY:

VACUUM INT2_TBL;
RESULT:
	duckdb: []

-----------
QUERY:


CREATE TABLE INT4_TBL(f1 int4);
RESULT:
	duckdb: []

-----------
QUERY:


INSERT INTO INT4_TBL(f1) VALUES
  ('   0  '),
  ('123456     '),
  ('    -123456'),
  ('2147483647'),  -- largest and smallest values
  ('-2147483647');
RESULT:
	duckdb: []

-----------
QUERY:

VACUUM INT4_TBL;
RESULT:
	duckdb: []

-----------
QUERY:


CREATE TABLE INT8_TBL(q1 int8, q2 int8);
RESULT:
	duckdb: []

-----------
QUERY:


INSERT INTO INT8_TBL VALUES
  ('  123   ','  456'),
  ('123   ','4567890123456789'),
  ('4567890123456789','123'),
  (+4567890123456789,'4567890123456789'),
  ('+4567890123456789','-4567890123456789');
RESULT:
	duckdb: []

-----------
QUERY:

VACUUM INT8_TBL;
RESULT:
	duckdb: []

-----------
QUERY:


CREATE TABLE POINT_TBL(f1 point);
RESULT:
	duckdb: ERROR - Catalog Error: Type with name point does not exist!
Did you mean "int"?

-----------
QUERY:


INSERT INTO POINT_TBL(f1) VALUES
  ('(0.0,0.0)'),
  ('(-10.0,0.0)'),
  ('(-3.0,4.0)'),
  ('(5.1, 34.5)'),
  ('(-5.0,-12.0)'),
  ('(1e-300,-1e-300)'),  -- To underflow
  ('(1e+300,Inf)'),  -- To overflow
  ('(Inf,1e+300)'),  -- Transposed
  (' ( Nan , NaN ) '),
  ('10.0,10.0');
RESULT:
	duckdb: ERROR - Catalog Error: Table with name POINT_TBL does not exist!
Did you mean "INT2_TBL"?

-----------
QUERY:

-- We intentionally don/* REPLACED */''t vacuum point_tbl here /* REPLACED */, geometry depends on that

CREATE TABLE TEXT_TBL (f1 text);
RESULT:
	duckdb: []

-----------
QUERY:


INSERT INTO TEXT_TBL VALUES
  ('doh!'),
  ('hi de ho neighbor');
RESULT:
	duckdb: []

-----------
QUERY:

VACUUM TEXT_TBL;
RESULT:
	duckdb: []

-----------
QUERY:


CREATE TABLE VARCHAR_TBL(f1 varchar(4));
RESULT:
	duckdb: []

-----------
QUERY:


INSERT INTO VARCHAR_TBL (f1) VALUES
  ('a'),
  ('ab'),
  ('abcd'),
  ('abcd    ');
RESULT:
	duckdb: []

-----------
QUERY:

VACUUM VARCHAR_TBL;
RESULT:
	duckdb: []

-----------
QUERY:


CREATE TABLE onek (
	unique1		int4,
	unique2		int4,
	two			int4,
	four		int4,
	ten			int4,
	twenty		int4,
	hundred		int4,
	thousand	int4,
	twothousand	int4,
	fivethous	int4,
	tenthous	int4,
	odd			int4,
	even		int4,
	stringu1	name,
	stringu2	name,
	string4		name
);
RESULT:
	duckdb: ERROR - Catalog Error: Type with name name does not exist!
Did you mean "date"?

-----------
QUERY:


-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests' '/data/onek.data'
COPY onek FROM /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests/data/onek.data';
RESULT:
	duckdb: ERROR - Catalog Error: Table with name onek does not exist!
Did you mean "temp.information_schema.columns"?

-----------
QUERY:

VACUUM ANALYZE onek;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name onek does not exist!
Did you mean "temp.information_schema.columns"?
LINE 2: VACUUM ANALYZE onek;
                       ^

-----------
QUERY:


CREATE TABLE onek2 AS SELECT * FROM onek;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name onek does not exist!
Did you mean "temp.information_schema.columns"?
LINE 3: CREATE TABLE onek2 AS SELECT * FROM onek;
                                            ^

-----------
QUERY:

VACUUM ANALYZE onek2;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name onek2 does not exist!
Did you mean "temp.information_schema.columns"?
LINE 2: VACUUM ANALYZE onek2;
                       ^

-----------
QUERY:


CREATE TABLE tenk1 (
	unique1		int4,
	unique2		int4,
	two			int4,
	four		int4,
	ten			int4,
	twenty		int4,
	hundred		int4,
	thousand	int4,
	twothousand	int4,
	fivethous	int4,
	tenthous	int4,
	odd			int4,
	even		int4,
	stringu1	name,
	stringu2	name,
	string4		name
);
RESULT:
	duckdb: ERROR - Catalog Error: Type with name name does not exist!
Did you mean "date"?

-----------
QUERY:


-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests' '/data/tenk.data'
COPY tenk1 FROM /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests/data/tenk.data';
RESULT:
	duckdb: ERROR - Catalog Error: Table with name tenk1 does not exist!
Did you mean "temp.information_schema.tables"?

-----------
QUERY:

VACUUM ANALYZE tenk1;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name tenk1 does not exist!
Did you mean "temp.information_schema.tables"?
LINE 2: VACUUM ANALYZE tenk1;
                       ^

-----------
QUERY:


CREATE TABLE tenk2 AS SELECT * FROM tenk1;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name tenk1 does not exist!
Did you mean "temp.information_schema.tables"?
LINE 3: CREATE TABLE tenk2 AS SELECT * FROM tenk1;
                                            ^

-----------
QUERY:

VACUUM ANALYZE tenk2;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name tenk2 does not exist!
Did you mean "temp.information_schema.tables"?
LINE 2: VACUUM ANALYZE tenk2;
                       ^

-----------
QUERY:


CREATE TABLE person (
	name 		text,
	age			int4,
	location 	point
);
RESULT:
	duckdb: ERROR - Catalog Error: Type with name point does not exist!
Did you mean "int"?

-----------
QUERY:


-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests' '/data/person.data'
COPY person FROM /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests/data/person.data';
RESULT:
	duckdb: ERROR - Catalog Error: Table with name person does not exist!
Did you mean "pg_enum"?

-----------
QUERY:

VACUUM ANALYZE person;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name person does not exist!
Did you mean "pg_enum"?
LINE 2: VACUUM ANALYZE person;
                       ^

-----------
QUERY:


CREATE TABLE emp (
	salary 		int4,
	manager 	name
) INHERITS (person);
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "INHERITS"

-----------
QUERY:


-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests' '/data/emp.data'
COPY emp FROM /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests/data/emp.data';
RESULT:
	duckdb: ERROR - Catalog Error: Table with name emp does not exist!
Did you mean "pg_am"?

-----------
QUERY:

VACUUM ANALYZE emp;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name emp does not exist!
Did you mean "pg_am"?
LINE 2: VACUUM ANALYZE emp;
                       ^

-----------
QUERY:


CREATE TABLE student (
	gpa 		float8
) INHERITS (person);
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "INHERITS"

-----------
QUERY:


-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests' '/data/student.data'
COPY student FROM /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests/data/student.data';
RESULT:
	duckdb: ERROR - Catalog Error: Table with name student does not exist!
Did you mean "TEXT_TBL"?

-----------
QUERY:

VACUUM ANALYZE student;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name student does not exist!
Did you mean "TEXT_TBL"?
LINE 2: VACUUM ANALYZE student;
                       ^

-----------
QUERY:


CREATE TABLE stud_emp (
	percent 	int4
) INHERITS (emp, student);
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "INHERITS"

-----------
QUERY:


-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests' '/data/stud_emp.data'
COPY stud_emp FROM /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests/data/stud_emp.data';
RESULT:
	duckdb: ERROR - Catalog Error: Table with name stud_emp does not exist!
Did you mean "pg_am"?

-----------
QUERY:

VACUUM ANALYZE stud_emp;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name stud_emp does not exist!
Did you mean "pg_am"?
LINE 2: VACUUM ANALYZE stud_emp;
                       ^

-----------
QUERY:


CREATE TABLE road (
	name		text,
	thepath 	path
);
RESULT:
	duckdb: ERROR - Catalog Error: Type with name path does not exist!
Did you mean "date"?

-----------
QUERY:


-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests' '/data/streets.data'
COPY road FROM /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests/data/streets.data';
RESULT:
	duckdb: ERROR - Catalog Error: Table with name road does not exist!
Did you mean "pg_am"?

-----------
QUERY:

VACUUM ANALYZE road;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name road does not exist!
Did you mean "pg_am"?
LINE 2: VACUUM ANALYZE road;
                       ^

-----------
QUERY:


CREATE TABLE ihighway () INHERITS (road);
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "INHERITS"

-----------
QUERY:


INSERT INTO ihighway
   SELECT *
   FROM ONLY road
   WHERE name ~ 'I- .*';
RESULT:
	duckdb: ERROR - Catalog Error: Table with name ihighway does not exist!
Did you mean "pg_am"?

-----------
QUERY:

VACUUM ANALYZE ihighway;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name ihighway does not exist!
Did you mean "pg_am"?
LINE 2: VACUUM ANALYZE ihighway;
                       ^

-----------
QUERY:


CREATE TABLE shighway (
	surface		text
) INHERITS (road);
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "INHERITS"

-----------
QUERY:


INSERT INTO shighway
   SELECT *, 'asphalt'
   FROM ONLY road
   WHERE name ~ 'State Hwy.*';
RESULT:
	duckdb: ERROR - Catalog Error: Table with name shighway does not exist!
Did you mean "pg_am"?

-----------
QUERY:

VACUUM ANALYZE shighway;
RESULT:
	duckdb: ERROR - Catalog Error: Table with name shighway does not exist!
Did you mean "pg_am"?
LINE 2: VACUUM ANALYZE shighway;
                       ^

-----------
QUERY:


--
-- We must have some enum type in the database for opr_sanity and type_sanity.
--

create type stoplight as enum ('red', 'yellow', 'green');
RESULT:
	duckdb: []

-----------
QUERY:


--
-- Also create some non-built-in range types.
--

create type float8range as range (subtype = float8, subtype_diff = float8mi);
RESULT:
	duckdb: ERROR - Parser Error: Expected an integer constant as type modifier

-----------
QUERY:


create type textrange as range (subtype = text, collation = "C");
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "="

-----------
QUERY:


--
-- Create some C functions that will be used by various tests.
--

CREATE FUNCTION binary_coercible(oid, oid)
    RETURNS bool
    AS /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/postgresql/src/test/regress/regress.so', 'binary_coercible'
    LANGUAGE C STRICT STABLE PARALLEL SAFE;
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "RETURNS"

-----------
QUERY:


CREATE FUNCTION ttdummy ()
    RETURNS trigger
    AS /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/postgresql/src/test/regress/regress.so'
    LANGUAGE C;
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "RETURNS"

-----------
QUERY:


-- Use hand-rolled hash functions and operator classes to get predictable
-- result on different machines.  The hash function for int4 simply returns
-- the sum of the values passed to it and the one for text returns the length
-- of the non-empty string value passed to it or 0.

create function part_hashint4_noop(value int4, seed int8)
    returns int8 as $$
    select value + seed;
    $$ language sql strict immutable parallel safe;
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "int4"

-----------
QUERY:


create operator class part_test_int4_ops for type int4 using hash as
    operator 1 =,
    function 2 part_hashint4_noop(int4, int8);
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "operator"

-----------
QUERY:


create function part_hashtext_length(value text, seed int8)
    returns int8 as $$
    select length(coalesce(value, ''))::int8
    $$ language sql strict immutable parallel safe;
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "text"

-----------
QUERY:


create operator class part_test_text_ops for type text using hash as
    operator 1 =,
    function 2 part_hashtext_length(text, int8);
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "operator"

-----------
QUERY:


--
-- These functions are used in tests that used to use md5(), which we now
-- mostly avoid so that the tests will pass in FIPS mode.
--

create function fipshash(bytea)
    returns text
    strict immutable parallel safe leakproof
    return substr(encode(sha256($1), 'hex'), 1, 32);
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "returns"

-----------
QUERY:


create function fipshash(text)
    returns text
    strict immutable parallel safe leakproof
    return substr(encode(sha256($1::bytea), 'hex'), 1, 32);
RESULT:
	duckdb: ERROR - Parser Error: syntax error at or near "returns"
